--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "4.12.3",
-    "@material-ui/icons": "4.11.2",
     "@reach/skip-nav": "0.16.0",
+    "bootstrap": "5.1.1",
     "classnames": "2.3.1",
     "next": "11.1.2",
     "next-intl": "2.0.1",
     "next-pwa": "5.3.1",
     "next-seo": "4.26.0",
     "react": "17.0.2",
+    "react-bootstrap": "2.0.0-beta.6",
     "react-calendly": "2.2.1",
     "react-dom": "17.0.2"
   },
