index on develop: 5053d88 feat(bootstrap): react-bootstrap disable theme provider

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,29 @@
 {
   "cSpell.words": [
+    "Attachements",
+    "autohide",
     "CALENDLY",
+    "clearfix",
+    "commitlint",
+    "datetime",
+    "Dropdowns",
+    "dropup",
+    "Elementlement",
+    "haspopup",
+    "HTMLEHTML",
     "LINKEDIN",
+    "monospace",
+    "Navs",
+    "nextjs",
     "Plex",
     "prefill",
-    "venogwe"
+    "Proptypes",
+    "screenreaders",
+    "srting",
+    "toggleable",
+    "Typey",
+    "unstyled",
+    "venogwe",
+    "zindex"
   ]
 }
