--- a/package.json
+++ b/package.json
@@ -38,17 +38,22 @@
     ]
   },
   "dependencies": {
+    "@bootstrap-styled/provider": "2.0.3",
     "@reach/skip-nav": "0.16.0",
+    "@react-icons/all-files": "4.1.0",
     "bootstrap": "5.1.1",
+    "bootstrap-styled": "2.7.2",
     "classnames": "2.3.1",
     "next": "11.1.2",
     "next-intl": "2.0.1",
     "next-pwa": "5.3.1",
     "next-seo": "4.26.0",
+    "next-transpile-modules": "8.0.0",
     "react": "17.0.2",
     "react-bootstrap": "2.0.0-beta.6",
     "react-calendly": "2.2.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "5.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "13.1.0",
@@ -59,7 +64,6 @@
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
     "@typescript-eslint/eslint-plugin": "4.30.0",
-    "@typescript-eslint/parser": "4.30.0",
     "babel-jest": "27.1.1",
     "commitizen": "4.2.4",
     "critters": "0.0.10",
@@ -69,12 +73,7 @@
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "8.3.0",
-    "eslint-import-resolver-typescript": "2.4.0",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.24.0",
-    "eslint-plugin-react-hooks": "4.2.0",
     "husky": "7.0.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.1.1",
