--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,8 @@
 NEXT_MINIMIZE=false
-NEXT_PUBLIC_CALENDLY_URL=https://calendly.com/d
+NEXT_PUBLIC_SITE_NAME=Victor Enogwe
+NEXT_PUBLIC_SITE_URL=http://localhost:3000/
+NEXT_PUBLIC_DEFAULT_LOCALE=en-US
+NEXT_PUBLIC_TWITTER_USERNAME=iykyvic
+NEXT_PUBLIC_CALENDLY_URL=https://calendly.com/iykyvic
+NEXT_PUBLIC_LINKEDIN_URL=https://www.linkedin.com/in/victor-enogwe-1b7ab937/
+NEXT_PUBLIC_THEME_DIRECTION=rtl
