feat(sitemap): dynamic sitemaps

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ NEXT_PUBLIC_TWITTER_USERNAME=iykyvic
 NEXT_PUBLIC_CALENDLY_URL=https://calendly.com/iykyvic
 NEXT_PUBLIC_LINKEDIN_URL=https://www.linkedin.com/in/victor-enogwe-1b7ab937/
 NEXT_PUBLIC_THEME_DIRECTION=rtl
+NEXT_PUBLIC_EMAIL=hello@victorenogwe.me
