--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "type-check": "tsc",
     "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\"",
@@ -80,6 +81,7 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "27.1.1",
     "lint-staged": "11.1.2",
+    "next-sitemap": "1.6.173",
     "prettier": "2.3.2",
     "react-test-renderer": "17.0.2",
     "sass": "1.39.2",
