--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "bootstrap": "5.1.1",
     "bootstrap-styled": "2.7.2",
     "classnames": "2.3.1",
+    "lodash.omitby": "4.6.0",
     "next": "11.1.2",
     "next-intl": "2.0.1",
     "next-pwa": "5.3.1",
     "next-seo": "4.26.0",
     "next-transpile-modules": "8.0.0",
     "react": "17.0.2",
-    "react-bootstrap": "2.0.0-beta.6",
+    "react-bootstrap": "2.0.0-rc.0",
     "react-calendly": "2.2.1",
     "react-dom": "17.0.2",
     "styled-components": "5.3.1"
@@ -62,12 +63,14 @@
     "@next/bundle-analyzer": "11.1.2",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.1.0",
+    "@types/lodash.omitby": "4.6.6",
     "@types/node": "14.17.14",
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
     "@types/styled-components": "5.1.14",
     "@typescript-eslint/eslint-plugin": "4.30.0",
     "babel-jest": "27.1.1",
+    "babel-plugin-styled-components": "1.13.2",
     "commitizen": "4.2.4",
     "critters": "0.0.10",
     "cypress": "8.3.1",
@@ -86,6 +89,9 @@
     "react-test-renderer": "17.0.2",
     "sass": "1.39.2",
     "typescript": "4.4.2"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   },
   "config": {
     "commitizen": {
