--- a/package.json
+++ b/package.json
@@ -42,19 +42,28 @@
     "@bootstrap-styled/provider": "2.0.3",
     "@reach/skip-nav": "0.16.0",
     "@react-icons/all-files": "4.1.0",
+    "@types/lodash.omit": "4.5.6",
     "bootstrap": "5.1.1",
     "bootstrap-styled": "2.7.2",
     "classnames": "2.3.1",
+    "js-cookie": "3.0.1",
+    "lodash.get": "4.4.2",
+    "lodash.omit": "4.5.0",
     "lodash.omitby": "4.6.0",
-    "next": "11.1.2",
+    "lodash.pick": "4.4.0",
+    "next": "12.1.0",
     "next-intl": "2.0.1",
     "next-pwa": "5.3.1",
     "next-seo": "4.26.0",
-    "next-transpile-modules": "8.0.0",
+    "next-transpile-modules": "9.0.0",
     "react": "17.0.2",
     "react-bootstrap": "2.0.0-rc.0",
     "react-calendly": "2.2.1",
     "react-dom": "17.0.2",
+    "react-redux": "7.2.6",
+    "redux": "4.1.2",
+    "redux-persist": "6.0.0",
+    "redux-persist-cookie-storage": "1.0.0",
     "styled-components": "5.3.1"
   },
   "devDependencies": {
@@ -63,10 +72,13 @@
     "@next/bundle-analyzer": "11.1.2",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.1.0",
+    "@types/lodash.get": "4.4.6",
     "@types/lodash.omitby": "4.6.6",
+    "@types/lodash.pick": "4.4.6",
     "@types/node": "14.17.14",
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
+    "@types/react-redux": "7.1.23",
     "@types/styled-components": "5.1.14",
     "@typescript-eslint/eslint-plugin": "4.30.0",
     "babel-jest": "27.1.1",
