--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,16 +25,14 @@
       "@/public/*": [
         "./public/*"
       ]
-    }
+    },
+    "incremental": true
   },
   "exclude": [
     "node_modules",
     "public"
   ],
   "include": [
-    "next-env.d.ts",
-    "bootstrap-styled.d.ts",
-    "@bootstrap-styled.d.ts",
     "**/*.ts",
     "**/*.tsx"
   ]
