--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,7 @@ charset = utf-8
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
+max_line_length = 140
+
+[*.md]
+trim_trailing_whitespace = false
