--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
   "rules": {
     "prettier/prettier": "error",
     "camelcase": "off",
+    "import/order": "off",
     "import/prefer-default-export": "off",
     "react/prop-types": "off",
     "react/jsx-filename-extension": "off",
@@ -47,6 +48,12 @@
         "tsx": "never",
         "js": "never",
         "jsx": "never"
+      }
+    ],
+    "max-len": [
+      "error",
+      {
+        "code": 140
       }
     ],
     "quotes": "off",
