feat(state): use cookies to manage local state

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,25 +67,30 @@
     "Attachements",
     "autohide",
     "CALENDLY",
+    "Cantarell",
     "clearfix",
     "commitlint",
     "datetime",
     "Dropdowns",
     "dropup",
     "Elementlement",
+    "Fira",
     "haspopup",
     "HTMLEHTML",
     "LINKEDIN",
     "middlewares",
     "monospace",
     "Navs",
+    "Neue",
     "nextjs",
     "persistoid",
     "persistor",
     "Plex",
     "prefill",
     "Proptypes",
+    "Roboto",
     "screenreaders",
+    "Segoe",
     "srting",
     "toggleable",
     "Typey",
