--- a/package.json
+++ b/package.json
@@ -42,15 +42,15 @@
     "@bootstrap-styled/provider": "2.0.3",
     "@reach/skip-nav": "0.16.0",
     "@react-icons/all-files": "4.1.0",
-    "@types/lodash.omit": "4.5.6",
     "bootstrap": "5.1.1",
     "bootstrap-styled": "2.7.2",
     "classnames": "2.3.1",
-    "js-cookie": "3.0.1",
+    "cookies-js": "1.2.3",
     "lodash.get": "4.4.2",
     "lodash.omit": "4.5.0",
     "lodash.omitby": "4.6.0",
     "lodash.pick": "4.4.0",
+    "lodash.set": "4.3.2",
     "next": "12.1.0",
     "next-intl": "2.0.1",
     "next-pwa": "5.3.1",
@@ -59,12 +59,10 @@
     "react": "17.0.2",
     "react-bootstrap": "2.0.0-rc.0",
     "react-calendly": "2.2.1",
+    "react-cookie": "4.1.1",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.6",
-    "redux": "4.1.2",
-    "redux-persist": "6.0.0",
-    "redux-persist-cookie-storage": "1.0.0",
-    "styled-components": "5.3.1"
+    "styled-components": "5.3.1",
+    "universal-cookie": "4.0.4"
   },
   "devDependencies": {
     "@commitlint/cli": "13.1.0",
@@ -73,12 +71,13 @@
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.1.0",
     "@types/lodash.get": "4.4.6",
+    "@types/lodash.omit": "4.5.6",
     "@types/lodash.omitby": "4.6.6",
     "@types/lodash.pick": "4.4.6",
+    "@types/lodash.set": "4.3.6",
     "@types/node": "14.17.14",
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
-    "@types/react-redux": "7.1.23",
     "@types/styled-components": "5.1.14",
     "@typescript-eslint/eslint-plugin": "4.30.0",
     "babel-jest": "27.1.1",
