--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "keyofStringsOnly": false,
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
