fix(build): component props error

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 NEXT_MINIMIZE=false
-NEXT_PUBLIC_SITE_NAME=Victor Enogwe
+NEXT_PUBLIC_SITE_NAME=Victor Eñogwe
 NEXT_PUBLIC_SITE_URL=http://localhost:3000/
 NEXT_PUBLIC_DEFAULT_LOCALE=en-US
 NEXT_PUBLIC_TWITTER_USERNAME=iykyvic
