--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Victor Enogwe",
-  "short_name": "Victor Enogwe",
+  "name": "Victor Eñogwe",
+  "short_name": "Victor Eñogwe",
   "icons": [
     {
       "src": "/icon.png",
