--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_SITE_NAME=Victor Enogwe
+NEXT_PUBLIC_SITE_NAME=Victor Eñogwe
 NEXT_PUBLIC_SITE_URL=https://www.victorenogwe.me/
 NEXT_PUBLIC_DEFAULT_LOCALE=en-US
 NEXT_PUBLIC_TWITTER_USERNAME=iykyvic
