--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A TypeScript starter for Next.js that includes all you need to build an amazing portfolio",
   "version": "1.0.0",
   "private": true,
-  "author": "Victor Enogwe <hello@victorenogwe.me> (@iykyvic)",
+  "author": "Victor Eñogwe <hello@victorenogwe.me> (@iykyvic)",
   "license": "MIT",
   "homepage": "https://victorenogwe.me",
   "bugs": "https://github.com/victor-enogwe/venogwe.git/issues",
@@ -62,6 +62,7 @@
     "react-cookie": "4.1.1",
     "react-dom": "17.0.2",
     "styled-components": "5.3.1",
+    "type-fest": "2.12.2",
     "universal-cookie": "4.0.4"
   },
   "devDependencies": {
