--- a/package.json
+++ b/package.json
@@ -40,67 +40,68 @@
   },
   "dependencies": {
     "@bootstrap-styled/provider": "2.0.3",
-    "@reach/skip-nav": "0.16.0",
+    "@reach/skip-nav": "0.17.0",
     "@react-icons/all-files": "4.1.0",
-    "bootstrap": "5.1.1",
+    "bootstrap": "5.2.2",
     "bootstrap-styled": "2.7.2",
-    "classnames": "2.3.1",
-    "cookies-js": "1.2.3",
+    "classnames": "2.3.2",
+    "js-cookie": "3.0.1",
     "lodash.get": "4.4.2",
+    "lodash.merge": "4.6.2",
     "lodash.omit": "4.5.0",
     "lodash.omitby": "4.6.0",
     "lodash.pick": "4.4.0",
     "lodash.set": "4.3.2",
-    "next": "12.1.0",
-    "next-intl": "2.0.1",
-    "next-pwa": "5.3.1",
-    "next-seo": "4.26.0",
+    "next": "12.3.1",
+    "next-intl": "2.7.6",
+    "next-pwa": "5.6.0",
+    "next-seo": "5.5.0",
     "next-transpile-modules": "9.0.0",
-    "react": "17.0.2",
-    "react-bootstrap": "2.0.0-rc.0",
-    "react-calendly": "2.2.1",
-    "react-cookie": "4.1.1",
-    "react-dom": "17.0.2",
-    "styled-components": "5.3.1",
-    "type-fest": "2.12.2",
-    "universal-cookie": "4.0.4"
+    "react": "18.2.0",
+    "react-bootstrap": "2.5.0",
+    "react-calendly": "4.1.0",
+    "react-dom": "18.2.0",
+    "styled-components": "^5"
   },
   "devDependencies": {
-    "@commitlint/cli": "13.1.0",
-    "@commitlint/config-conventional": "13.1.0",
-    "@next/bundle-analyzer": "11.1.2",
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.1.0",
-    "@types/lodash.get": "4.4.6",
-    "@types/lodash.omit": "4.5.6",
-    "@types/lodash.omitby": "4.6.6",
-    "@types/lodash.pick": "4.4.6",
-    "@types/lodash.set": "4.3.6",
-    "@types/node": "14.17.14",
-    "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
-    "@types/styled-components": "5.1.14",
-    "@typescript-eslint/eslint-plugin": "4.30.0",
-    "babel-jest": "27.1.1",
-    "babel-plugin-styled-components": "1.13.2",
-    "commitizen": "4.2.4",
-    "critters": "0.0.10",
-    "cypress": "8.3.1",
+    "@commitlint/cli": "17.1.2",
+    "@commitlint/config-conventional": "17.1.0",
+    "@next/bundle-analyzer": "12.3.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@types/js-cookie": "3.0.2",
+    "@types/lodash.get": "4.4.7",
+    "@types/lodash.merge": "4.6.7",
+    "@types/lodash.omit": "4.5.7",
+    "@types/lodash.omitby": "4.6.7",
+    "@types/lodash.pick": "4.4.7",
+    "@types/lodash.set": "4.3.7",
+    "@types/node": "18.8.0",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "@types/styled-components": "5.1.26",
+    "@typescript-eslint/eslint-plugin": "5.38.1",
+    "babel-jest": "29.1.2",
+    "babel-plugin-styled-components": "2.0.7",
+    "commitizen": "4.2.5",
+    "critters": "0.0.16",
+    "cypress": "10.9.0",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.32.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-next": "11.1.2",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "husky": "7.0.2",
+    "eslint": "8.24.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "husky": "8.0.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "27.1.1",
-    "lint-staged": "11.1.2",
-    "next-sitemap": "1.6.173",
-    "prettier": "2.3.2",
-    "react-test-renderer": "17.0.2",
-    "sass": "1.39.2",
-    "typescript": "4.4.2"
+    "jest": "29.1.2",
+    "lint-staged": "13.0.3",
+    "next-sitemap": "3.1.23",
+    "prettier": "2.7.1",
+    "react-test-renderer": "18.2.0",
+    "sass": "1.55.0",
+    "type-fest": "3.0.0",
+    "typescript": "4.8.4"
   },
   "resolutions": {
     "styled-components": "^5"
