--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_SITE_NAME=Victor Eñogwe
+NEXT_PUBLIC_SITE_HEADLINE=Software Engineer (Web)
 NEXT_PUBLIC_SITE_URL=https://www.victorenogwe.me/
 NEXT_PUBLIC_DEFAULT_LOCALE=en-US
 NEXT_PUBLIC_TWITTER_USERNAME=iykyvic
@@ -6,3 +7,5 @@ NEXT_PUBLIC_CALENDLY_URL=https://calendly.com/iykyvic
 NEXT_PUBLIC_LINKEDIN_URL=https://www.linkedin.com/in/victor-enogwe-1b7ab937/
 NEXT_PUBLIC_THEME_DIRECTION=rtl
 NEXT_PUBLIC_EMAIL=hello@victorenogwe.me
+GHOST_CONTENT_API_KEY=
+GHOST_CONTENT_URL=
