--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "@bootstrap-styled/provider": "2.0.3",
     "@reach/skip-nav": "0.17.0",
-    "@react-icons/all-files": "4.1.0",
+    "@tryghost/content-api": "1.11.4",
     "bootstrap": "5.2.2",
     "bootstrap-styled": "2.7.2",
     "classnames": "2.3.2",
@@ -57,11 +57,14 @@
     "next-pwa": "5.6.0",
     "next-seo": "5.5.0",
     "next-transpile-modules": "9.0.0",
+    "nextjs-progressbar": "0.0.14",
     "react": "18.2.0",
     "react-bootstrap": "2.5.0",
     "react-calendly": "4.1.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5"
+    "react-icons": "4.4.0",
+    "styled-components": "^5",
+    "type-fest": "3.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "17.1.2",
@@ -80,6 +83,7 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "5.1.26",
+    "@types/tryghost__content-api": "1.3.11",
     "@typescript-eslint/eslint-plugin": "5.38.1",
     "babel-jest": "29.1.2",
     "babel-plugin-styled-components": "2.0.7",
@@ -100,7 +104,6 @@
     "prettier": "2.7.1",
     "react-test-renderer": "18.2.0",
     "sass": "1.55.0",
-    "type-fest": "3.0.0",
     "typescript": "4.8.4"
   },
   "resolutions": {
